tests/test_compile/cases/deku_size_vec.rs
use deku::prelude::*;

#[derive(DekuSize)]
struct Test {
    data: Vec<u8>,
}

fn main() {
    let _size = Test::SIZE_BITS;
}
